classics and team media

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!--Nav Bar-->
-    <header>
+    <!-- <header>
         <a href="index.html">
             <img class="logo" src="images/logo.png" alt="logo">
         </a>
@@ -22,15 +22,15 @@
             <ul class="navcontent">
                 <li class="activeNav"><a href="index.html">Home</a></li>
                 <li><a href="html/menu.html">Menu</a></li>
-                <li><a href="html/about.html">About</a></li>
-                <li><a href="html/faq.html">FAQ</a></li>
-                <li><a href="html/reviews.html">Reviews</a></li>
+                <li><a href="html/about.html">FAQ</a></li>
+                <li><a href="html/faq.html">Review</a></li>
+                <li><a href="html/reviews.html">About</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <!--Hero Section-->
-    <section class="container">
+    <!-- <section class="container">
         <div class="containerBody">
             <h2>
                 <span style="color:#6F4E37">DELIGHT IN</span>
@@ -46,7 +46,7 @@
         <div class="mainImg">
             <img src="images/bread.jpg">
         </div>
-    </section>
+    </section> -->
 
     <!--classics section-->
     <section class="classicSection">
@@ -76,24 +76,11 @@
     </section>
 
     <!--info section-->
-    <section class="container">
+    <!-- <section class="container">
         <div class="infoImg" id="infoImg">
             <img src="images/strawberrycake.jpg">
         </div>
-        <script>
-            var images = ['images/strawberrycake.jpg', 'images/whitecake.jpg', 'images/easter.jpg'];
-            var x = 0;
-            var imgs = document.getElementById('infoImg');
-            setInterval(slideshow, 2000);
-            function slideshow() {
-                if (x < images.length) {
-                    x = x + 1;
-                } else {
-                    x = 1;
-                }
-            imgs.innerHTML = "<img src=" + images[x - 1] + ">";
-            }
-        </script>
+
         <div class="containerBody">
             <h2><span style="color:#6F4E37">For every occasion</span></h2>
             <p>We've got you covered for any holiday, special occasion,</p>
@@ -116,10 +103,10 @@
                 <a href="html/menu.html">Explore</a>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--menu section-->
-    <h1 class="menuTitle">From Our Kitchen</h1>
+    <!-- <h1 class="menuTitle">From Our Kitchen</h1>
     <div class="row">
         <div class="card">
             <div class="productImage">
@@ -178,7 +165,7 @@
                 <p class="price"><del class="deletedPrice">Rs 560 </del> Rs 520 </p>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- view more button -->
     <div class="viewMoreContainer" id="viewMoreContainer">
@@ -198,13 +185,17 @@
     </div>
 
     <!--faq-->
-    <section class="container">
+    <!-- <section class="container">
         <div class="containerBody">
             <h2><span style="color:#6F4E37">FAQs</span></h2>
             <p>You have questions.</p>
-            <p>We have answers.</p><br><br>
+            <p>We have answers.</p><br><br> -->
+
+
             <!--faqs -->
-            <div class = "faqs">
+
+
+            <!-- <div class = "faqs">
                 <div class = "faq">
                     <button class = "ques">
                         Do your products contain allergens?
@@ -237,11 +228,11 @@
         <div class="faqImg">
             <img src="images/sand.jpg" alt="faq">
         </div>
-    </section>
+    </section> -->
 
     <!--review section-->
-    <section id="review">
-        <h4 style="text-align: center; font-size: 40px; color:#6F4E37">Let customers speak for us</h4>
+    <!-- <section id="review">
+        <h4 style="text-align: center; font-size: 30px; color:#6F4E37">Let customers speak for us</h4>
         <div class="reviewContainer">
             <div class="swiper reviewSlider">
                 <div class="swiper-wrapper">
@@ -290,10 +281,10 @@
                 </div>
             </div>    
         </div>
-    </section>
+    </section> -->
 
     <!--gallery section-->
-    <section class="gallery">
+    <!-- <section class="gallery">
         <div class="galleryVid">
             <video width="572" height="370" autoplay loop>
                 <source src="videos/vid1.mp4" type="video/mp4">
@@ -318,11 +309,11 @@
                 <img src="images/gallery8.jpg" alt="galleryphoto">
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--team section-->
     <section class ="teamSection">
-        <h1 style="text-align: center; font-size: 50px; color:#6F4E37">Meet Our Team</h1>
+        <h1>Meet Our Team</h1>
         <div class="teamContainer">
             <div class="members">
                 <img src = "images/chef1.jpg" alt="team">
@@ -364,10 +355,10 @@
                 <a href="index.html">
                     <img class="logoFooter" src="images/logoFooter.png" alt="logo">
                 </a>
-                <h4>
+                <h3>
                     Contact us for nationwide delivery or <br/>
                     local, in-store pick up.
-                </h4>
+                </h3>
                 <p><i class="fa-solid fa-location-dot"></i>  Kamalpokhari, Kathmandu</p>
                 <p><i class="fa-solid fa-phone"></i> 01-4987345</p>
                 <p><i class="fa-solid fa-envelope"></i> bakemandu@gmail.com</p>
@@ -376,9 +367,9 @@
                 <h3>Our Store</h3>
                 <ul>
                     <li><a href="html/blog.html">Menu</a></li>
-                    <li><a href="html/products.html">About</a></li>
-                    <li><a href="html/research.html">FAQ</a></li>
-                    <li><a href="html/aboutus.html">Reviews</a></li>
+                    <li><a href="html/products.html">FAQ</a></li>
+                    <li><a href="html/research.html">Review</a></li>
+                    <li><a href="html/aboutus.html">About</a></li>
                 </ul>
             </div>
             <div class="usefulLinks">
@@ -402,6 +393,7 @@
     </footer>
 
     <!-- external js -->
+    <script src = "js/slideshow.js"></script>
     <script src = "js/viewInfo.js"></script>
     <script src = "js/faq.js"></script>
     <script src = "js/subscribe.js"></script>
