--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <nav>
             <ul class="navcontent">
                 <li class="activeNav"><a href="index.html">Home</a></li>
-                <li><a href="html/menu.html">Menu</a></li>
-                <li><a href="html/about.html">FAQ</a></li>
-                <li><a href="html/faq.html">Review</a></li>
-                <li><a href="html/reviews.html">About</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#review">Review</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
         </nav>
     </header> -->
@@ -106,66 +106,68 @@
     </section> -->
 
     <!--menu section-->
-    <!-- <h1 class="menuTitle">From Our Kitchen</h1>
-    <div class="row">
-        <div class="card">
-            <div class="productImage">
-                <img src="images/cinnamon.jpg" alt="cinnamonRolls">
+    <!-- <section id="menu">
+        <h1 class="menuTitle">From Our Kitchen</h1>
+        <div class="row">
+            <div class="card">
+                <div class="productImage">
+                    <img src="images/cinnamon.jpg" alt="cinnamonRolls">
+                </div>
+                <div class="productInfo">
+                    <h4 class="productName">Cinnamon Rolls</h4>
+                    <p class="price"><del class="deletedPrice"> Rs 150 </del> Rs 120 </p>
+                </div>
             </div>
-            <div class="productInfo">
-                <h4 class="productName">Cinnamon Rolls</h4>
-                <p class="price"><del class="deletedPrice"> Rs 150 </del> Rs 120 </p>
+            <div class="card">
+                <div class="productImage">
+                    <img src="images/cookie.jpg" alt="cookies">
+                </div>
+                <div class="productInfo">
+                    <h4 class="productName">Choco Chip Cookies</h4>
+                    <p class="price">Rs 200</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="productImage">
+                    <img src="images/cheesecake.jpg" alt="cheesecake">
+                </div>
+                <div class="productInfo">
+                    <h4 class="productName">Cheesecake</h4>
+                    <p class="price">Rs 400</p>
+                </div>
             </div>
         </div>
-        <div class="card">
-            <div class="productImage">
-                <img src="images/cookie.jpg" alt="cookies">
-            </div>
-            <div class="productInfo">
-                <h4 class="productName">Choco Chip Cookies</h4>
-                <p class="price">Rs 200</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="productImage">
-                <img src="images/cheesecake.jpg" alt="cheesecake">
-            </div>
-            <div class="productInfo">
-                <h4 class="productName">Cheesecake</h4>
-                <p class="price">Rs 400</p>
-            </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="card">
-            <div class="productImage">
-                <img src="images/muffin.jpg" alt="muffin">
+        <div class="row">
+            <div class="card">
+                <div class="productImage">
+                    <img src="images/muffin.jpg" alt="muffin">
+                </div>
+                <div class="productInfo">
+                    <h4 class="productName">Choco Muffin</h4>
+                    <p class="price">Rs 80 </p>
+                </div>
             </div>
-            <div class="productInfo">
-                <h4 class="productName">Choco Muffin</h4>
-                <p class="price">Rs 80 </p>
+            <div class="card">
+                <div class="productImage">
+                    <img src="images/waffle.jpg" alt="waffle">
+                </div>
+                <div class="productInfo">
+                    <h4 class="productName">Waffle</h4>
+                    <p class="price">Rs 450</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="productImage">
+                    <img src="images/tiramisu3.jpg" alt="tiramisu">
+                </div>
+                <div class="productInfo">
+                    <h4 class="productName">Tiramisu</h4>
+                    <p class="price"><del class="deletedPrice">Rs 560 </del> Rs 520 </p>
+                </div>
             </div>
         </div>
-        <div class="card">
-            <div class="productImage">
-                <img src="images/waffle.jpg" alt="waffle">
-            </div>
-            <div class="productInfo">
-                <h4 class="productName">Waffle</h4>
-                <p class="price">Rs 450</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="productImage">
-                <img src="images/tiramisu3.jpg" alt="tiramisu">
-            </div>
-            <div class="productInfo">
-                <h4 class="productName">Tiramisu</h4>
-                <p class="price"><del class="deletedPrice">Rs 560 </del> Rs 520 </p>
-            </div>
-        </div>
-    </div> -->
+    </section> -->
 
     <!-- view more button -->
     <div class="viewMoreContainer" id="viewMoreContainer">
@@ -185,7 +187,7 @@
     </div>
 
     <!--faq-->
-    <!-- <section class="container">
+    <!-- <section class="container" id="faq">
         <div class="containerBody">
             <h2><span style="color:#6F4E37">FAQs</span></h2>
             <p>You have questions.</p>
@@ -284,7 +286,7 @@
     </section> -->
 
     <!--gallery section-->
-    <!-- <section class="gallery">
+    <!-- <section class="gallery" id="about">
         <div class="galleryVid">
             <video width="572" height="370" autoplay loop>
                 <source src="videos/vid1.mp4" type="video/mp4">
@@ -366,10 +368,10 @@
             <div class="storeLinks">
                 <h3>Our Store</h3>
                 <ul>
-                    <li><a href="html/blog.html">Menu</a></li>
-                    <li><a href="html/products.html">FAQ</a></li>
-                    <li><a href="html/research.html">Review</a></li>
-                    <li><a href="html/aboutus.html">About</a></li>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#review">Review</a></li>
+                    <li><a href="#about">About</a></li>
                 </ul>
             </div>
             <div class="usefulLinks">
