landing section media

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header> -->
 
     <!--Hero Section-->
-    <!-- <section class="container">
+    <section class="container">
         <div class="containerBody">
             <h2>
                 <span style="color:#6F4E37">DELIGHT IN</span>
@@ -46,7 +46,7 @@
         <div class="mainImg">
             <img src="images/bread.jpg">
         </div>
-    </section> -->
+    </section>
 
     <!--classics section-->
     <section class="classicSection">
