--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section> -->
 
     <!--menu section-->
-    <!-- <section id="menu">
+    <section id="menu">
         <h1 class="menuTitle">From Our Kitchen</h1>
         <div class="row">
             <div class="card">
@@ -167,7 +167,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- view more button -->
     <div class="viewMoreContainer" id="viewMoreContainer">
@@ -286,13 +286,13 @@
     </section> -->
 
     <!--gallery section-->
-    <!-- <section class="gallery" id="about">
+    <section class="gallery" id="about">
         <div class="galleryVid">
-            <video width="572" height="370" autoplay loop>
+            <video controls autoplay>
                 <source src="videos/vid1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <video width="572" height="370" autoplay loop>
+            <video controls autoplay>
                 <source src="videos/vid2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -311,7 +311,7 @@
                 <img src="images/gallery8.jpg" alt="galleryphoto">
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!--team section-->
     <section class ="teamSection">
@@ -397,17 +397,11 @@
     <!-- external js -->
     <script src = "js/slideshow.js"></script>
     <script src = "js/viewInfo.js"></script>
+    <script src = "js/viewMore.js"></script>
     <script src = "js/faq.js"></script>
     <script src = "js/subscribe.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/slider.js"></script>
-
-    <script>
-        function viewMore() {
-            document.getElementById("viewMoreItems").style.display = "flex";
-            document.getElementById("viewMoreContainer").style.display = "none";
-        }
-    </script>
 
 </body>
 </html>
