made faq img and answer responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>From citrus to spice and chewy to crunchy,</p>
             <p>we have crowd-pleasing snacks for every craving.</p><br><br>
             <div class="tasteBtn">
-                <a href="html/menu.html">TASTE</a>
+                <a href="#menu">TASTE</a>
             </div>
         </div>
         <div class="mainImg">
@@ -53,22 +53,22 @@
         <h1 style="text-align: center; font-size: 50px;">OUR CLASSICS</h1>
         <div class="classicItems">
             <div class="classics">
-                <a href="html/menu.html"><img src="images/tiramisu3.jpg"></a>
+                <a href="#menu"><img src="images/tiramisu3.jpg"></a>
                 <h3>Tiramisu</h3>
                 <p>Perfect combination of light, but somehow also rich and decadent. </p>
             </div>
             <div class="classics">
-                <a href="html/menu.html"><img src="images/waffle.jpg"></a>
+                <a href="#menu"><img src="images/waffle.jpg"></a>
                 <h3>Waffle</h3>
                 <p>Nice crisp exterior with fluffy interior, perfect for your breakfast.</p>
             </div>
             <div class="classics">
-                <a href="html/menu.html"><img src="images/plainMuffin.jpg"></a>
+                <a href="#menu"><img src="images/plainMuffin.jpg"></a>
                 <h3>Muffin</h3>
                 <p>Simple yet satisfying flavor that pairs well with your favorite spreads.</p>
             </div>
             <div class="classics">
-                <a href="html/menu.html"><img src="images/cookie.jpg"></a>
+                <a href="#menu"><img src="images/cookie.jpg"></a>
                 <h3>Choco Chip Cookies</h3>
                 <p>Buttery dough and decadent chocolate chips.</p>
             </div>
@@ -187,17 +187,13 @@
     </div>
 
     <!--faq-->
-    <!-- <section class="container" id="faq">
+    <section class="container" id="faq">
         <div class="containerBody">
             <h2><span style="color:#6F4E37">FAQs</span></h2>
             <p>You have questions.</p>
-            <p>We have answers.</p><br><br> -->
-
-
+            <p>We have answers.</p><br><br>
             <!--faqs -->
-
-
-            <!-- <div class = "faqs">
+            <div class = "faqs">
                 <div class = "faq">
                     <button class = "ques">
                         Do your products contain allergens?
@@ -230,7 +226,7 @@
         <div class="faqImg">
             <img src="images/sand.jpg" alt="faq">
         </div>
-    </section> -->
+    </section>
 
     <!--review section-->
     <!-- <section id="review">
