shifted footer css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header> -->
 
-    <!--Hero Section-->
+    <!--Landing Section-->
     <section class="container">
         <div class="containerBody">
             <h2>
@@ -76,7 +76,7 @@
     </section>
 
     <!--info section-->
-    <!-- <section class="container">
+    <section class="container">
         <div class="infoImg" id="infoImg">
             <img src="images/strawberrycake.jpg">
         </div>
@@ -103,7 +103,7 @@
                 <a href="html/menu.html">Explore</a>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!--menu section-->
     <section id="menu">
@@ -229,7 +229,7 @@
     </section>
 
     <!--review section-->
-    <!-- <section id="review">
+    <section id="review">
         <h4 style="text-align: center; font-size: 30px; color:#6F4E37">Let customers speak for us</h4>
         <div class="reviewContainer">
             <div class="swiper reviewSlider">
@@ -279,7 +279,7 @@
                 </div>
             </div>    
         </div>
-    </section> -->
+    </section>
 
     <!--gallery section-->
     <section class="gallery" id="about">
