--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>Take a journey through our website and discover an array of tempting treats crafted with love and care. From exquisitely decorated cakes to mouthwatering pastries, artisan bread, irresistible cookies, and more, there's something for every palate and every event.</p>
             </div>
             <div class="tasteBtn">
-                <a href="html/menu.html">Explore</a>
+                <a href="#menu">Explore</a>
             </div>
         </div>
     </section>
