made info page mobile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </h2>
             <p>From citrus to spice and chewy to crunchy,</p>
             <p>we have crowd-pleasing snacks for every craving.</p><br><br>
-            <div class="tasteBtn">
+            <div class="menuBtn">
                 <a href="#menu">TASTE</a>
             </div>
         </div>
@@ -76,7 +76,7 @@
     </section>
 
     <!--info section-->
-    <section class="container">
+    <!-- <section class="container">
         <div class="infoImg" id="infoImg">
             <img src="images/strawberrycake.jpg">
         </div>
@@ -99,11 +99,44 @@
             <div class = "infoContent" id="delivery">
                 <p>Take a journey through our website and discover an array of tempting treats crafted with love and care. From exquisitely decorated cakes to mouthwatering pastries, artisan bread, irresistible cookies, and more, there's something for every palate and every event.</p>
             </div>
-            <div class="tasteBtn">
+            <div class="menuBtn">
                 <a href="#menu">Explore</a>
             </div>
         </div>
+    </section> -->
+
+    <section class="infoSection">
+        <div class="infoContainer">
+            <div class="infoImg" id="infoImg">
+                <img src="images/strawberrycake.jpg">
+            </div>
+            <div class="infoBody">
+                <h2>For every occasion</h2>
+                <p>
+                    We've got you covered for any holiday, special occasion,<br/>
+                    or cause for celebration.
+                </p>
+                <div class = "infoTab">
+                    <p class = "infoTitle activeTitle" onclick="viewInfo('overview')">Overview</p>
+                    <p class = "infoTitle" onclick="viewInfo('opening')">Opening Hours</p>
+                    <p class = "infoTitle" onclick="viewInfo('delivery')">Delivery</p>
+                </div>
+                <div class = "infoContent activeContent" id="overview">
+                    <p>Take a journey through our website and discover an array of tempting treats crafted with love and care. From exquisitely decorated cakes to mouthwatering pastries, artisan bread, irresistible cookies, and more, there's something for every palate and every event.</p>
+                </div>
+                <div class = "infoContent" id="opening">
+                    <p><b>Sun-Fri</b> 7:00-8:30</p>
+                </div>
+                <div class = "infoContent" id="delivery">
+                    <p>Our delivery process is crafted to ensure your orders arrive promptly and in pristine condition. Once your order is received through our online platform or via phone call, our dedicated team swings into action. For deliveries within the valley, we offer a flat rate of Rs 100.</p>
+                </div>
+                <div class="menuBtn">
+                    <a href="#menu">Explore</a>
+                </div>
+            </div>
+        </div>
     </section>
+
 
     <!--menu section-->
     <section id="menu">
