fixed classic's img size

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 <body>
     <!--Nav Bar-->
-    <!-- <header>
+    <header>
         <a href="index.html">
             <img class="logo" src="images/logo.png" alt="logo">
         </a>
         <nav>
             <ul class="navcontent">
-                <li class="activeNav"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#review">Review</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
         </nav>
-    </header> -->
+    </header>
 
     <!--Landing Section-->
     <section class="container">
@@ -53,22 +53,22 @@
         <h1 style="text-align: center; font-size: 50px;">OUR CLASSICS</h1>
         <div class="classicItems">
             <div class="classics">
-                <a href="#menu"><img src="images/tiramisu3.jpg"></a>
+                <a href="#menu"><img src="images/tira.jpg"></a>
                 <h3>Tiramisu</h3>
                 <p>Perfect combination of light, but somehow also rich and decadent. </p>
             </div>
             <div class="classics">
-                <a href="#menu"><img src="images/waffle.jpg"></a>
+                <a href="#menu"><img src="images/waf.jpg"></a>
                 <h3>Waffle</h3>
                 <p>Nice crisp exterior with fluffy interior, perfect for your breakfast.</p>
             </div>
             <div class="classics">
-                <a href="#menu"><img src="images/plainMuffin.jpg"></a>
+                <a href="#menu"><img src="images/muf.jpg"></a>
                 <h3>Muffin</h3>
                 <p>Simple yet satisfying flavor that pairs well with your favorite spreads.</p>
             </div>
             <div class="classics">
-                <a href="#menu"><img src="images/cookie.jpg"></a>
+                <a href="#menu"><img src="images/cook.jpg"></a>
                 <h3>Choco Chip Cookies</h3>
                 <p>Buttery dough and decadent chocolate chips.</p>
             </div>
