increased info padding

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <img src="images/strawberrycake.jpg">
             </div>
             <div class="infoBody">
-                <h2>For every occasion</h2>
+                <h2>For Every Occasion</h2>
                 <p>
                     We've got you covered for any holiday, special occasion,<br/>
                     or cause for celebration.
