--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <section class="container">
         <div class="containerBody">
             <h2>
-                <span style="color:#6F4E37">DELIGHT IN</span>
-                <br/>
+                <span style="color:#6F4E37">DELIGHT IN</span><br/>
                 EVERY BITE
             </h2>
             <p>From citrus to spice and chewy to crunchy,</p>
@@ -314,33 +313,33 @@
     </section>
 
     <!--team section-->
-    <section class ="teamSection">
-        <h1>Meet Our Team</h1>
-        <div class="teamContainer">
-            <div class="members">
-                <img src = "images/chef1.jpg" alt="team">
-                <div class="overlay">
-                    <h3 class="text">
+    <section class="team-section">
+        <h1 class="team-section__title">Meet Our Team</h1>
+        <div class="team-section__container">
+            <div class="team-section__member">
+                <img src="images/chef1.jpg" alt="team">
+                <div class="team-section__overlay">
+                    <h3 class="team-section__bio">
                         Michael Smith <br/>
                         Executive Chef <br/>
                         2015 <br/>
                     </h3>
                 </div>
             </div>
-            <div class="members">
+            <div class="team-section__member">
                 <img src = "images/chef2.jpg" alt="team">
-                <div class="overlay">
-                    <h3 class="text">
+                <div class="team-section__overlay">
+                    <h3 class="team-section__bio">
                         Lui Fang <br/>
                         Head Chef <br/>
                         2012
                     </h3>
                 </div>
             </div>
-            <div class="members">
+            <div class="team-section__member">
                 <img src = "images/chef3.jpg" alt="team">
-                <div class="overlay">
-                    <h3 class="text">
+                <div class="team-section__overlay">
+                    <h3 class="team-section__bio">
                         Luke Wilson <br/>
                         Junior Chef <br/>
                         2020
